# app/Http/Controllers/ProductController.php
@@ -2,13 +2,13 @@
 
 namespace App\Http\Controllers;
 
-use App\Models\Product;
-use App\Infrastructure\Product\ProductRepository;
+use App\Domain\Product\ProductRepositoryInterface;
+
 class ProductController extends Controller
 {
-    private ProductRepository $productRepository;
+    private ProductRepositoryInterface $productRepository;
 
-    public function __construct(ProductRepository $productRepository)
+    public function __construct(ProductRepositoryInterface $productRepository)
     {
         $this->productRepository = $productRepository;
     }
@@ -65,6 +65,56 @@ class ProductController extends Controller
      */
     public function show(int $code){
         $product = $this->productRepository->findByCode($code);
+        return response()->json($product);
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/products/{code}",
+     *     summary="Atualiza um produto",
+     *     tags={"Produtos"},
+     *     @OA\Parameter(
+     *         name="code",
+     *         in="path",
+     *         description="Código do produto",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="status", type="string),
+     *             @OA\Property(property="url", type="string"),
+     *             @OA\Property(property="creator", type="string"),
+     *             @OA\Property(property="product_name", type="string"),
+     *             @OA\Property(property="quantity", type="string"),
+     *             @OA\Property(property="brands", type="string"),
+     *             @OA\Property(property="categories", type="string"),
+     *             @OA\Property(property="labels", type="string"),
+     *             @OA\Property(property="cities", type="string"),
+     *             @OA\Property(property="purchase_places", type="string"),
+     *             @OA\Property(property="stores", type="string"),
+     *             @OA\Property(property="ingredients_text", type="string"),
+     *             @OA\Property(property="traces", type="string"),
+     *             @OA\Property(property="serving_size", type="string"),
+     *             @OA\Property(property="serving_quantity", type="number"),
+     *             @OA\Property(property="nutriscore_score", type="number"),
+     *             @OA\Property(property="nutriscore_grade", type="string"),
+     *             @OA\Property(property="main_category", type="string"),
+     *             @OA\Property(property="image_url", type="string")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="No content"
+     *     )
+     * )
+     */
+    public function update(int $code)
+    {
+        $data = request()->all();
+        $product = $this->productRepository->updateByCode($code, $data);
         return response()->json($product);
     }
 }
