# routes/api.php
@@ -5,3 +5,4 @@ use App\Http\Controllers\ProductController;
 
 Route::get('/products', [ProductController::class, 'index']);
 Route::get('/products/{code}', [ProductController::class, 'show']);
+Route::put('/products/{code}', [ProductController::class, 'update']);
